styles/landing.css
body,
html {
  height: 100%;
  margin: 0;
}

body h1,
body h3,
html h1,
html h3 {
  margin: 0;
}

#black-logo {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  width: 100%;
}

#black-logo img {
  fill: #1c3144;
  width: 90%;
}

@media (min-width: 950px) {
  #black-logo img {
    width: 40%;
  }
}

body {
  background: url("../images/curcuit-board.jpg");
  background-repeat: repeat;
  background-size: contain;
  -webkit-transition: background-color 0.5s ease-in-out;
  transition: background-color 0.5s ease-in-out;
  margin: 0;
}

#container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  width: 100vw;
  height: 2000px;
}

.hamburger {
  -webkit-box-ordinal-group: 2;
      -ms-flex-order: 1;
          order: 1;
  width: 40%;
  z-index: 30;
}

.hamburger i {
  color: #1c3144;
  font-size: 75px;
  margin: 10px 10px 0 15px;
  width: 50%;
  float: right;
}

.hamburger i:active {
  color: #3f88c5;
}

@media (min-width: 950px) {
  .hamburger {
    -webkit-box-ordinal-group: 1;
        -ms-flex-order: 0;
            order: 0;
  }
  .hamburger i {
    float: left;
    font-size: 125px;
    margin: 30px 40px;
    -webkit-transition: 0.5s;
    transition: 0.5s;
  }
  .hamburger i:hover {
    color: #3f88c5;
  }
}

#logo-div {
  -webkit-box-ordinal-group: 1;
      -ms-flex-order: 0;
          order: 0;
  width: 60%;
}

#logo-div img {
  width: 95%;
  margin: 20px 20px;
}

@media (min-width: 950px) {
  #logo-div {
    -webkit-box-ordinal-group: 2;
        -ms-flex-order: 1;
            order: 1;
  }
  #logo-div img {
    width: 60%;
    margin: 20px 20px;
    float: right;
  }
}

#sub-menu {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  margin-top: 20px;
}

#sub-menu a {
  text-decoration: none;
  color: #1c3144;
}

#sub-menu h2 {
  font-size: 12px;
}

#sub-menu div {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  border-radius: 5px;
  background-color: white;
  width: 32%;
  border: 1px solid #3f88c5;
}

#sub-menu div:hover {
  background-color: #e9f0f6;
}

@media (min-width: 950px) {
  #sub-menu h2 {
    font-size: 30px;
  }
}

.landing-top-section {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  width: 100%;
}

@media (min-width: 950px) {
  .landing-top-section {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
  }
}

.landing-top-image {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  width: 100%;
}

.landing-top-image img {
  padding: 5px;
  width: 100%;
  margin-bottom: 5px;
}

@media (min-width: 950px) {
  .landing-top-image {
    width: 70%;
  }
  .landing-top-image img {
    padding: 5px;
    width: 90%;
  }
}

.landing-top-words {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.landing-top-words h1, .landing-top-words h2, .landing-top-words p {
  color: #1c3144;
  padding: 15px;
}

.landing-top-words a {
  text-decoration: none;
}

.landing-top-words h1 {
  font-family: "Nunito Sans", sans-serif;
  text-align: center;
  font-size: 40px;
}

.landing-top-words h2 {
  font-family: "Muli", sans-serif;
}

.landing-top-words p {
  font-family: "Martel", serif;
}

@media (min-width: 950px) {
  .landing-top-words {
    width: 30%;
  }
}

main {
  width: 95%;
  height: 90vh;
}

@media (min-width: 950px) {
  main {
    width: 95%;
    height: 500px;
  }
}

#menu-open {
  opacity: 0;
  position: fixed;
  pointer-events: none;
  background-size: cover;
  left: 0;
  padding-top: 120px;
  top: 0;
  background-color: #ffffff;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  z-index: 20;
}

#menu-open ul {
  list-style: none;
  padding: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  -webkit-box-align: space-around;
      -ms-flex-align: space-around;
          align-items: space-around;
  text-align: center;
}

#menu-open ul a, #menu-open li {
  text-decoration: none;
  font-family: "Muli", sans-serif;
  font-weight: bolder;
  color: #1c3144;
  font-size: 40px;
  padding: 20px 0 0 0;
  text-transform: uppercase;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

#menu-open ul a:hover, #menu-open ul a :active, #menu-open li:hover, #menu-open li :active {
  color: #3a658c;
}

nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  width: 95%;
  margin-top: 20px;
  background-color: #ffffff;
  border-radius: 5px;
}

@media (min-width: 950px) {
  nav {
    margin-top: 20px;
  }
}

section {
  background-color: #ffffff;
  background: -webkit-gradient(linear, left top, left bottom, color-stop(30%, white), to(rgba(255, 255, 255, 0.8)));
  background: linear-gradient(to bottom, white 30%, rgba(255, 255, 255, 0.8) 100%);
  border-radius: 5px;
  margin-top: 20px;
  width: 100%;
}

.section-top-menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  width: 100%;
}

.section-top-menu ul {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  width: 100%;
  list-style: none;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin: 0;
  padding: 0;
}

@media (min-width: 950px) {
  .section-top-menu ul {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
  }
}

.section-top-menu ul, .section-top-menu li a {
  text-decoration: none;
  font-family: "Muli", sans-serif;
  font-weight: bolder;
  color: #1c3144;
  font-size: 20px;
}

.section-top-menu li {
  width: 100%;
  text-align: center;
  border-bottom: 1px solid #1c3144;
}

@media (min-width: 950px) {
  .section-top-menu ul, .section-top-menu li a {
    font-size: 40px;
    padding: 20px 0;
    -webkit-transition: 0.4s;
    transition: 0.4s;
  }
  .section-top-menu ul:hover, .section-top-menu li a:hover {
    color: #d00000;
  }
  .section-top-menu li {
    border: 1px solid #1c3144;
    background-color: #fbfcfd;
  }
}

.section-top-image {
  width: 100%;
  text-align: center;
}

.section-top-image img {
  width: 95%;
}
/*# sourceMappingURL=landing.css.map */

